Removed iOS section
Removed iOS section and replaced it with GitHub information

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -30,7 +30,7 @@
 
     <section id="breast-cancer-awareness" class="row expanded align-center align-middle show-for-large ">
       <div class="columns small-12">
-        <iframe src="http://tracking.fatcow.com/pink/?image=1&ui=bxBqXdi3rNy" height="44" width="160" scrolling="no" frameborder="0"></iframe>
+        <iframe src="http://tracking.fatcow.com/pink/?image=4&ui=g4d0GLyPILS" height="130" width="200" scrolling="no" frameborder="0"></iframe>
       </div>
     </section>
 
@@ -303,34 +303,14 @@
       <div class="column align-self-middle small-6 medium-3 medium-offset-3 text-center mtb15"><a href="http://bgproducts.mx" target="_blank"><img src="img/bg_products.png" alt="BG Products Mexico" title="BG Products Mexico"></a></div>
       <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://konvence.com" target="_blank"><img src="img/konvence.png" alt="Somos konvence" title="Somos konvence"></a></div>
       <div class="column align-self-middle small-12 pt25">
-        <h2>iOS Development</h2>
+        <h2>My GitHub Page</h2>
       </div>
-      <div class="column align-self-middle small-12 medium-4 text-center mtb15">
-        <a href="https://itunes.apple.com/mx/app/ecocktail/id515733229?l=en&mt=8" target="_blank" title="e-Cocktails screenshots from the Apple app store"><img class="app" src="img/app1.png" alt="e-Cocktails screenshots from the Apple app store"></a>
-        <p>Become the Ultimate Bartender mastering the recipes of the finest cocktails with <a target="_blank" href="https://itunes.apple.com/mx/app/ecocktail/id515733229?l=en&mt=8">eCocktail</a></p>
+      <div class="column align-self-middle small-12 mt25">
+        <p>If you are interested to see more details about my work I kindly invite you to visit my <strong><a alt="GitHub Page" href="https://mikerai.github.io/Resume/" target="_blank" title="Miguel's GitHub page">GitHub Page</a></strong> where you will be able to find additional information, code examples, my public repositories and some other technical information that you might find useful.</p>
       </div>
-      <div class="column align-self-middle small-12 medium-4 text-center mtb15">
-        <a href="https://itunes.apple.com/mx/app/iparking-meter/id653821953?l=en&mt=8" target="_blank" title="iParking Meter screenshots from the Apple app store"><img class="app" src="img/app2.png" alt="e-Cocktails screenshots from the Apple app store"></a>
-        <p>Schedule personal reminders according to the limit set by the city parking meters with <a target="_blank" href="https://itunes.apple.com/mx/app/iparking-meter/id653821953?l=en&mt=8">iParking Meter</a></p>
+      <div class="column align-self-middle small-12 text-center">
+        <a class="large github button" href="https://mikerai.github.io/Resume/" target="_blank" alt="GitHub Page" title="Please visit my GitHub page"></a>
       </div>
-      <div class="column align-self-middle small-12 medium-4 text-center mtb15">
-        <a href="https://itunes.apple.com/mx/app/iwines-spain/id466646858?l=en&mt=8" target="_blank" title="iWines Spain screenshots from the Apple app store"><img class="app" src="img/app3.png" alt="iWines Spain screenshots from the Apple app store"></a>
-        <p>Review the notes for your favorite Spanish wines prior to purchase them to enjoy them with total confidence. Download today <a target="_blank" href="https://itunes.apple.com/mx/app/iwines-spain/id466646858?l=en&mt=8">iWines Spain</a></p>
-      </div>
-      <div class="column align-self-middle small-12 medium-6 text-center mtb15">
-        <a href="https://itunes.apple.com/mx/app/emmas-coloring-book/id649170055?l=en&mt=8" target="_blank" title="Emma's coloring book screenshots from the Apple app store"><img class="app" src="img/app4.png" alt="e-Cocktails screenshots from the Apple app store"></a>
-        <p>Choose the template, the colors and spend as many hours as you like drawings and printing with <a target="_blank" href="https://itunes.apple.com/mx/app/emmas-coloring-book/id649170055?l=en&mt=8">Emma's Coloring Book</a></p>
-      </div>
-      <div class="column align-self-middle small-12 medium-6 text-center mtb15">
-        <a href="https://itunes.apple.com/mx/app/emmas-farm/id587280109?l=en&mt=8" target="_blank" title="Emma's farm screenshots from the Apple app store"><img class="app" src="img/app5.png" alt="e-Cocktails screenshots from the Apple app store"></a>
-        <p>Come and play at <a target="_blank" href="https://itunes.apple.com/mx/app/emmas-farm/id587280109?l=en&mt=8">Emma's Farm!</a></p>
-      </div>
-      <div class="colum align-self-middle small-12 text-center mtb15">
-        <a class="large ios-support button" href="ios-apps.html" title="Need iOS support?">Need iOS support?</a>
-      </div>
-
-      <div class="colum align-self-middle small-12 text-center mtb15">
-      <a class="text-center" href="https://itunes.apple.com/us/artist/phiveleven-llc-mikerai/id461579017?l=en"><img class="crystal" src="img/appStoreBig2.png" width="320" height="95" alt="Miguel Angel Rodriguez Apple's App Store logo"></a></div>
     </section>
 
     <section class="row contact" id="contact">
