--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -361,9 +361,7 @@
         </a>
         <span>Back to top</span>
       </div>
-      <div class="columns small-12 medium-4 align-self-middle">
-        
-      </div>
+      <div class="columns small-12 medium-4 align-self-middle"></div>
       <div class="columns small-12 medium-4 text-center align-self-middle">
         <h4 class="pb15">You can follow me on twitter</h4>
         <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
