--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -272,11 +272,11 @@
       <div class="video-container">
           <div class="filter"></div>
           <video autoplay loop class="fillWidth">
-              <source src="videos/Productive-Morning.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-              <source src="videos/Productive-Morning.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+              <source src="videos/Inbox-Zero.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+              <source src="videos/Inbox-Zero.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
           </video>
           <div class="poster hidden">
-              <img src="videos/Productive-Morning.jpg" alt="Productive morning">
+              <img src="videos/Inbox-Zero.jpg" alt="Productive morning">
           </div>
       </div>
     </section> 
