CSS changes and Sara assets updates
CSS changes and Sara assets updates

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -214,23 +214,23 @@
       <span data-tooltip aria-haspopup="true" class="has-tip top" data-disable-hover="false" tabindex="2" title="Please visit my linkedin profile"><a href="https://www.linkedin.com/in/mikerai" target="_blank"><img data-interchange="[img/profile-picture.jpg, small], [img/profile-picture.jpg, medium], [img/profile-picture.jpg, large], [img/profile-picture@2x.jpg, retina]" alt="Miguel's profile picture"></a></span>
      </div>
      <article class="row">
-       <div class="columns small-12 medium-6">
+       <div class="columns small-12 medium-5 medium-offset-1">
         <ul>
           <li>Over <strong>14 years</strong> of management experience.</li>
           <li>User Experience focused professional.</li>
           <li>HTML, CSS, SASS, js, jQuery &amp; <strong>Oracle Commerce</strong> (formerly ATG) UI web developer with more than 10 years of experience.</li>
           <li>Proficient in responsive web design.</li>
           <li><strong>E-commerce</strong> expert. <strong>ADA</strong> &amp; <strong>SEO</strong> professional knowledge.</li>
-          <li>Junior iOS developer.</li>
         </ul>
        </div>
-       <div class="columns small-12 medium-6">
+       <div class="columns small-12 medium-5 end">
         <ul>
           <li>Certified <strong>Six Sigma Green Belt</strong>.</li>
           <li>Expert in wireframing &amp; prototyping.</li>
           <li>Multi-disciplinary teams leadership and management.</li>
           <li>Expert in <strong>forecasting</strong> &amp; project management.</li>
           <li>Proficient using SVN &amp; Git tools.</li>
+          <li>Junior iOS developer.</li>
           <li>Fluent in English.</li>
         </ul>
        </div>
