Added OGL to Sara's Resume
Added OGL to Sara's Resume

--- a/sara_junio_16/index.html
+++ b/sara_junio_16/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <link rel="icon" href="img/favicon.png" type="image/x-icon">
+    <meta property="og:title" content="Arq. Sara Muiño Murga" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://muino.net" />
+    <meta property="og:image" content="http://muino.net/videos/To-The-Left.jpg" />
+    <meta property="og:image" content="http://muino.net/videos/The-Boulevard.jpg" />
+    <meta property="og:image" content="http://muino.net/videos/Backyard.jpg" />
+    <meta property="og:description" content="Arquitecta, Maestra en Arquitectura y Nuevo Urbanismo y Coordinadora de Proyectos Habitacionales Sara Mui&ntilde;o Murga." />
+    <meta property="og:video" content="http://muino.net/videos/To-The-Left.mp4" />
+    <meta property="og:video:type" content="video/mp4" />
+    <meta property="og:video:width" content="1920" />
+    <meta property="og:video:height" content="1080" />
   </head>
   <body>
     
