--- a/sara_junio_16/index.html
+++ b/sara_junio_16/index.html
@@ -54,7 +54,7 @@
               <span>Men&uacute;</span>
             </div>
           </div>
-          <div class="row main-heading align-middle align-center hide-for-small">
+          <div class="row main-heading align-middle align-center hide-for-small-only">
             <div class="large-12 columns">
               <h1 class="text-center">Sara Mui&ntilde;o Murga</h1>
               <p>Maestra en Arquitectura y Nuevo Urbanismo.</p>
@@ -69,7 +69,7 @@
               <a href="#education" alt="Ver más acerca de mi" title="Por favor da click aquí para saber más de mi"></a>
             </div>
           </div>
-          <section class="homepage-hero-module">
+          <section class="homepage-hero-module hide-for-small-only">
             <div class="video-container">
                 <div class="filter"></div>
                 <video autoplay loop class="fillWidth">
@@ -92,7 +92,7 @@
                 <a href="http://muino.net/CV.pdf" target="_blank" class="large button">Descargar mi CV</a>
               </div>
             </div>
-            <div class="arrow"></div>
+            <div class="arrow hide-for-small-only"></div>
           </section>
           
           <section class="row" id="education">
