Added OGL image
New OGL image for sharing purposes added

--- a/sara_junio_16/index.html
+++ b/sara_junio_16/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Arq. Sara Muiño Murga" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://muino.net" />
+    <meta property="og:image" content="http://muino.net/img/potential-bg.jpg" />
     <meta property="og:image" content="http://muino.net/videos/To-The-Left.jpg" />
     <meta property="og:image" content="http://muino.net/videos/The-Boulevard.jpg" />
     <meta property="og:image" content="http://muino.net/videos/Backyard.jpg" />
