Fixed typo in site description
Typo

--- a/sara_junio_16/index.html
+++ b/sara_junio_16/index.html
@@ -16,7 +16,7 @@
     <meta property="og:image" content="http://muino.net/videos/To-The-Left.jpg" />
     <meta property="og:image" content="http://muino.net/videos/The-Boulevard.jpg" />
     <meta property="og:image" content="http://muino.net/videos/Backyard.jpg" />
-    <meta property="og:description" content="Arquitecta, Maestra en Arquitectura y Nuevo Urbanismo y Coordinadora de Proyectos Habitacionales Sara Mui&ntilde;o Murga." />
+    <meta property="og:description" content="Arquitecta, Maestra en Arquitectura y Nuevo Urbanismo y Coordinadora de Proyectos Habitacionales." />
     <meta property="og:video" content="http://muino.net/videos/To-The-Left.mp4" />
     <meta property="og:video:type" content="video/mp4" />
     <meta property="og:video:width" content="1920" />
