--- a/violetaestudio_2015-5.5.2/index.html
+++ b/violetaestudio_2015-5.5.2/index.html
@@ -55,14 +55,7 @@
     <script>
       $(document).foundation();
     </script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-49096652-3', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <script>_gaq=[['_setAccount','UA-49096652-3'],['_trackPageview']]</script>
+    <script src="https://www.google-analytics.com/ga.js"></script>
   </body>
 </html>
