Several updates (third parties, htaccess). Modified index a little bit

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="canonical" href="http://mikerai.com" />
+    <link rel="canonical" href="https://m.511.mx" />
     <meta name="robots" content="index follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
     <title>Miguel Angel Rodriguez Alvarez Icaza</title>
@@ -12,16 +12,16 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <meta property="og:title" content="Miguel Angel Rodriguez Alvarez Icaza" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://mikerai.com" />
-    <meta property="og:image" content="http://mikerai.com/img/hero-banner-2.jpg" />
-    <meta property="og:image" content="http://mikerai.com/img/apple-iphone-desk-office.jpg" />
-    <meta property="og:image" content="http://mikerai.com/videos/Mock-up.jpg" />
-    <meta property="og:image" content="http://mikerai.com/videos/Productive-Morning.jpg" />
-    <meta property="og:image" content="http://mikerai.com/videos/Wall-Sketching.jpg" />
-    <meta property="og:image" content="http://mikerai.com/img/profile-picture.jpg" />
-    <meta property="og:image" content="http://mikerai.com/img/profile-picture@2x.jpg" />
+    <meta property="og:url" content="https://m.511.mx" />
+    <meta property="og:image" content="https://m.511.mx/img/hero-banner-2.jpg" />
+    <meta property="og:image" content="https://m.511.mx/img/apple-iphone-desk-office.jpg" />
+    <meta property="og:image" content="https://m.511.mx/videos/Mock-up.jpg" />
+    <meta property="og:image" content="https://m.511.mx/videos/Productive-Morning.jpg" />
+    <meta property="og:image" content="https://m.511.mx/videos/Wall-Sketching.jpg" />
+    <meta property="og:image" content="https://m.511.mx/img/profile-picture.jpg" />
+    <meta property="og:image" content="https://m.511.mx/img/profile-picture@2x.jpg" />
     <meta property="og:description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle Commerce (formerly ATG) • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you." />
-    <meta property="og:video" content="http://mikerai.com/videos/Productive-Morning.mp4" />
+    <meta property="og:video" content="https://m.511.mx/videos/Productive-Morning.mp4" />
     <meta property="og:video:type" content="video/mp4" />
     <meta property="og:video:width" content="1920" />
     <meta property="og:video:height" content="1080" />
@@ -192,7 +192,7 @@
       </article>
 
       <div class="columns align-self-middle small-12 medium-6">
-        <a class="large download button" href="http://mikerai.com/Miguel_Angel_Rodriguez_Resume.pdf" download="Miguel_Angel_Rodriguez_Resume" target="_blank" title="Download my Resume">Download my Resume</a>
+        <a class="large download button" href="https://m.511.mx/Miguel_Angel_Rodriguez_Resume.pdf" download="Miguel_Angel_Rodriguez_Resume" target="_blank" title="Download my Resume">Download my Resume</a>
       </div>
       <div class="columns small-12 medium-6 linkedin">
         <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
@@ -343,7 +343,7 @@
           <p class="noCaptcha">
             <label for="captcha">Are you human?</label>   
           </p>
-          <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT"  data-callback="onValidate"></div>
+          <div class="g-recaptcha" data-sitekey="6LeqiA4UAAAAANMNGRi6B_HkkQ4hGx_1cl63Oqc9"  data-callback="onValidate"></div>
         </div>
       </div>     
     </section>
