--- a/sara_junio_16/index.html
+++ b/sara_junio_16/index.html
@@ -74,11 +74,11 @@
             <div class="video-container">
                 <div class="filter"></div>
                 <video autoplay loop class="fillWidth">
-                    <source src="videos/Free-Parking.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-                    <source src="videos/Free-Parking.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="videos/The-Boulevard.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="videos/The-Boulevard.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
                 </video>
                 <div class="poster hidden">
-                    <img src="videos/Free-Parking.jpg" alt="The Boulevard">
+                    <img src="videos/The-Boulevard.jpg" alt="The Boulevard">
                 </div>
             </div>
           </section>
